--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,11 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>maizuo</title>
   </head>
+  <script>
+    document.documentElement.style.fontSize = document.documentElement.clientWidth/10 + 'px';
+  </script>
   <body>
-    <noscript>
-      <strong>We're sorry but maizuo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
